--- a/Design/source/design.css
+++ b/Design/source/design.css
@@ -3,6 +3,10 @@
     font-size: 2rem;
 }
 
+.log-thead {
+    background-color: #f8f9fa !important;
+}
+
 #banner .row {
     min-height: 100vh !important;
 }
