profile validations updated

--- a/Backend/node-express/views/profile.html
+++ b/Backend/node-express/views/profile.html
@@ -10,7 +10,8 @@
                             <label for="full-name">Full Name</label>
                             <input required type="text" class="form-control" name="name" id="profile-fullName"
                                 placeholder="Full Name" value="Atif Mehmood">
-                                <p id="profile-name-err" class="pl-1 text-danger h6"></p>
+                                <p id="profile-name-err" class="pl-1 text-danger h6">
+                                </p>
                         </div>
                         <div class="form-group  col-md-6  ">
                             <label for="email">Email</label>
