--- a/Backend/node-express/views/base/base.html
+++ b/Backend/node-express/views/base/base.html
@@ -81,7 +81,7 @@
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="./Landing.html">Logout</a>
+                                <a class="dropdown-item" href="http://localhost:8000">Logout</a>
                                 <a class="dropdown-item" href="http://localhost:8000/profile">Profile</a>
                             </div>
                         </div>
