--- a/Backend/node-express/views/dashboard.html
+++ b/Backend/node-express/views/dashboard.html
@@ -65,7 +65,7 @@
 
 {% block mainContent %}
 <!--Main Section start-->
-<section>
+<section  class="mt-5 pt-5">
     <div class="container pt-3 pb-3">
         <div class="row pt-2 pb-2">
             <div class="col-md-6 col-sm-12 pt-2">
