--- a/Backend/node-express/views/exercise.html
+++ b/Backend/node-express/views/exercise.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block mainContent %}
-<section class="container mb-2">
+<section class="container mb-2"  class="mt-5 pt-5">
     <div class='row pt-4 text-center'>
         <div class="col-lg-12">
             <h2>Exercise Log <i class="fa fa-running"></i> </h2>
