--- a/Backend/node-express/views/food.html
+++ b/Backend/node-express/views/food.html
@@ -2,7 +2,7 @@
 
 
 {% block mainContent %}
-<section class="container">
+<section class="container"  class="mt-5 pt-5">
     <div class='row pt-4 text-center'>
         <div class="col-lg-12">
             <h2>Food Log <i class="fa fa-pizza-slice"></i></h2>
