--- a/Backend/node-express/views/goals.html
+++ b/Backend/node-express/views/goals.html
@@ -65,7 +65,7 @@
 
 {% block mainContent %}
 
-<section class="container">
+<section class="container"  class="mt-5 pt-5">
     <div class="row p-3">
         <div class="col-lg-12 text-center">
             <h2>Goal Details</h2>
