--- a/Backend/node-express/views/landing.html
+++ b/Backend/node-express/views/landing.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block mainContent %}
-<section id="banner">
+<section id="banner"  class="mt-5 pt-5">
     <div class="overlay">
         <div class="container">
             <div class="row align-items-center">
