--- a/Backend/node-express/views/components/food-log-modal.html
+++ b/Backend/node-express/views/components/food-log-modal.html
@@ -28,9 +28,9 @@
 
                 </div>
                 <div class="dropdown search">
-                    <input type="search" id="searchBar" placeholder="search food" class="form-control dropdown-toggle"
+                    <input type="search" id="foodsearchBar" placeholder="search food" class="form-control dropdown-toggle"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <div class="dropdown-menu" id="search-dropdown-menu" aria-labelledby="searchBar"
+                    <div class="dropdown-menu" id="food-search-dropdown-menu" aria-labelledby="foodsearchBar"
                         style="max-height: 400px;overflow-y: scroll;width:100%">
 
                     </div>
@@ -58,7 +58,7 @@
             <!--Footer-->
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-                <button id="add-food-btn" class="btn btnn-primary btn-sm ">Add</button>
+                <button id="add-food-btn" class="btn btnn-primary btn-sm text-white ">Add</button>
             </div>
         </div>
 
