--- a/Backend/node-express/views/dashboard.html
+++ b/Backend/node-express/views/dashboard.html
@@ -283,7 +283,7 @@
                     </table>
                     <div class="d-flex flex-row-reverse">
                         <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD"
-                            data-toggle="modal" data-target="#log-exercise">Log Exercise</button>
+                            data-toggle="modal" data-target="#addExerciseModal">Log Exercise</button>
 
                     </div>
                 </div>
