--- a/Backend/node-express/views/base/base.html
+++ b/Backend/node-express/views/base/base.html
@@ -77,7 +77,7 @@
                     <div class="col-md-4 text-right">
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <b>Atif Mehmood</b>
+                                <b>{{req.user.name}}</b>
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
@@ -143,11 +143,14 @@
         
     {% endblock modals %}
         
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/jquery.min.js" ></script>
+    <script src="js/popper.min.js"  ></script>
+    <script src="js/bootstrap.min.js" ></script>
     <script src="js/utils.js"></script>
-    <script src="js/loggers.js"></script>
+    <!--script src="js/loggers.js"></script-->
+    <script src="js/weight-logger.js"></script>
+    <script src="js/food-logger.js"></script>
+    <script src="js/exercise-logger.js"></script>
 
     {% block extraJs %}
         
