Profile Update added

--- a/Backend/node-express/views/components/exercise-log-modal.html
+++ b/Backend/node-express/views/components/exercise-log-modal.html
@@ -26,7 +26,7 @@
                             <th>#</th>
                             <th>Exercise Name</th>
                             <th>Duration</th>
-                            <th>Calories Burned</th>
+                            <th>Calories Burn</th>
                             <th>Remove</th>
                         </tr>
                     </thead>
