Goal Add Updated

--- a/Backend/views/components/add-goal-modal.html
+++ b/Backend/views/components/add-goal-modal.html
@@ -19,9 +19,9 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-form-label text-dark">Kneck (Inches)</label>
+                            <label class="col-form-label text-dark">Neck (Inches)</label>
                             <div class="col-lg-8">
-                                <input type="number" id="add-goal-kneck" min="10" max="500" class="form-control"
+                                <input type="number" id="add-goal-neck" min="10" max="500" class="form-control"
                                     required>
                             </div>
                         </div>
