--- a/Backend/views/components/exercise-log-modal.html
+++ b/Backend/views/components/exercise-log-modal.html
@@ -21,7 +21,7 @@
                         </div>
 
                 <table class="table-sm table  mt-2 text- table-hover text-center table-responsive-sm">
-                    <thead class="bg-primary text-white">
+                    <thead class="">
                         <tr>
                             <th>#</th>
                             <th>Exercise Name</th>
