--- a/Backend/views/components/food-log-modal.html
+++ b/Backend/views/components/food-log-modal.html
@@ -40,7 +40,7 @@
             <div class="modal-body">
 
                 <table class="table-sm table  table-hover text-center table-responsive-sm">
-                    <thead class="bg-primary text-white">
+                    <thead class="">
                         <tr>
                             <th>#</th>
                             <th>Food</th>
