--- a/Backend/views/components/login-modal.html
+++ b/Backend/views/components/login-modal.html
@@ -12,8 +12,9 @@
             <div class="modal-body">
                 <form id="login-form">
                     {% include "components/login-form.html" %}
+                    <button id="login-btn" type="submit" class="btn btnn-primary text-white btn-block">Login</button>
                 </form>
-                <button id="login-btn" class="btn btnn-primary text-white btn-block">Login</button>
+                
                 <div class="row pt-2">
                     <div class="col-md-6"><a href="">Creat new account</a></div>
                     <div class="col-md-6 text-right"><a href="">Forgot your password?</a></div>
