--- a/Backend/views/components/signup-modal.html
+++ b/Backend/views/components/signup-modal.html
@@ -11,8 +11,9 @@
             <div class="modal-body">
                 <form id="signup-form">
                     {% include "components/signup-form.html" %}
+                    <button id="signup-btn" type="submit" class="btn btnn-primary text-white btn-block">Signup</button>
                 </form>
-                <button id="signup-btn" class="btn btnn-primary text-white btn-block">Signup</button>
+                
             </div>
 
         </div>
