--- a/Backend/views/components/login-form.html
+++ b/Backend/views/components/login-form.html
@@ -1,10 +1,10 @@
 <p class="text-danger" id="login-err"></p>
 <div class="input-group mb-3">
     <p id="email-err"></p>
-    <input type="email" class="form-control" name="email" placeholder="email" aria-label="email"  aria-describedby="basic-addon1">
+    <input type="email" class="form-control" name="email" placeholder="email" aria-label="email"  aria-describedby="basic-addon1" required>
 </div>
 <div class="input-group mb-3">
     <p id="password-err"></p>
     <input type="password" class="form-control" name="password" placeholder="password" aria-label="password"
-        aria-describedby="basic-addon1">
+        aria-describedby="basic-addon1" required>
 </div>
