--- a/Backend/views/components/signup-form.html
+++ b/Backend/views/components/signup-form.html
@@ -1,12 +1,12 @@
 <p class="text-danger" id="signup-message-err"></p>
 <div class="mb-3">
     <p class="text-danger" id="signup-email-err"></p>
-    <input id="signup-email" type="email" class="form-control" name="email" placeholder="email" aria-label="email" aria-describedby="basic-addon1">
+    <input id="signup-email" type="email" class="form-control" name="email" placeholder="email" aria-label="email" aria-describedby="basic-addon1" required>
 </div>
 <div class="mb-3">
         <p class="text-danger" id="signup-password1-err"></p>
-    <input id="signup-password1" type="password" name="password1" class="form-control" placeholder="password" aria-label="password" aria-describedby="basic-addon1">
+    <input id="signup-password1" type="password" name="password1" class="form-control" placeholder="password" aria-label="password" aria-describedby="basic-addon1" required>
 </div>
 <div class="mb-3">
-    <input id="signup-password2" type="password" name="password2" class="form-control" placeholder="confirm password" aria-label="password" aria-describedby="basic-addon1">
+    <input id="signup-password2" type="password" name="password2" class="form-control" placeholder="confirm password" aria-label="password" aria-describedby="basic-addon1" required>
 </div>
