--- a/Backend/views/exercise.html
+++ b/Backend/views/exercise.html
@@ -11,8 +11,7 @@
             <input type="date" class="form-control" id="date-picker">
         </div>
         <div class="col-lg-12">
-
-            <table class="table table-sm table-responsive-sm">
+            <table class="table table-responsive-sm">
                 <thead class="labels text-white">
                     <tr>
                         <th>Exercise</th>
