--- a/Backend/views/goals.html
+++ b/Backend/views/goals.html
@@ -65,26 +65,28 @@
 
 {% block mainContent %}
 
-<section class="container"  class="mt-5 pt-5">
+<section class="container" class="mt-5 pt-5">
     <div class="row p-3">
         <div class="col-lg-12 text-center">
             <h2>Goal Details</h2>
         </div>
     </div>
     <div class="row p-3">
-        <div class=" col-md-6  pt-3">
-            <div id="current-goal-div" class="card card-body">
-                <h3 class="card-title text-center">Current Goal</h3>
-                <h6 class="m-4">You Don't Have Any Goal In Progress</h6>
-
-            </div>
-            <div class="d-flex pt-2">
-                <button class="btn btnn-primary" data-toggle="modal" data-target="#addGoalModal">Add Goal</button>
+        <div class=" col-md-6 pt-3">
+            <div class="card">
+                <div class="card-header bg-primary">
+                    <h3 class=" text-center bg-primary text-white">Current Goal</h3>
+                </div>
+                <div id="current-goal-div" class="card-body">
+                    <h6 class="m-4">You Don't Have Any Goal In Progress</h6>
+                </div>
+                <div class="card-footer d-flex pt-2">
+                    <button class="btn btnn-primary" data-toggle="modal" data-target="#addGoalModal">Add Goal</button>
+                </div>
             </div>
         </div>
         <div class="col-md-6 text-center">
-
-            <div style="width:100%;">
+            <div>
                 <div class="chartjs-size-monitor">
                     <div class="chartjs-size-monitor-expand">
                         <div class="">
@@ -97,8 +99,8 @@
                         </div>
                     </div>
                 </div>
-                <canvas id="canvas" style="display: block; width: 100%; height: 350px;" class="chartjs-render-monitor">
-                </canvas>
+                <canvas id="canvas" style="display: block; width: 100%; height: 390px;"
+                    class="chartjs-render-monitor"></canvas>
             </div>
         </div>
     </div>
@@ -120,14 +122,16 @@
 
 
 {% block modals %}
-    {% include 'components/add-goal-modal.html' %}
+{% include 'components/add-goal-modal.html' %}
 {% endblock modals %}
-    
+
 
 {% block extraJs %}
 <script>
     $(() => {
         fetchGoals()
+        let year =""
+        fetchWeightProgressGraph(year)
         console.log($("#add-goal-form"))
         $("#add-goal-form").submit((e) => {
             e.preventDefault()
@@ -137,9 +141,9 @@
             let neck = $("#add-goal-neck").val()
             let hips = $("#add-goal-hips").val()
             let waist = $("#add-goal-waist").val()
-        
+
             if (goalWeight && goalDate)
-                $.post("http://localhost:8000/goals", { "goalWeight": goalWeight, "goalDate": goalDate, "neck":neck, "hips":hips, "waist":waist }, (data) => {
+                $.post("http://localhost:8000/goals", { "goalWeight": goalWeight, "goalDate": goalDate, "neck": neck, "hips": hips, "waist": waist }, (data) => {
                     $("add-goal-weight").val(0)
                     fetchGoals()
                     $('#addGoalModal').modal('hide')
